--- a/README.adoc
+++ b/README.adoc
@@ -18,7 +18,7 @@ under the License.
 ////
 [[apache-ofbiz]]
 = Apache OFBiz®
-The Apache OFBiz Project
+The Apache OFBiz Project (porked FMT ERP project 2026)
 
 image:https://img.shields.io/badge/License-Apache%202.0-blue.svg[link=http://www.apache.org/licenses/LICENSE-2.0]
 image:https://img.shields.io/badge/Version-trunk-red.svg[link=https://github.com/apache/ofbiz-framework]
